# tog

./: .gitignore  README.md  pyproject.toml
tog/: cli.py  data_asker.py  data_types.py  toggl.py
