[tool.poetry]
name = "tog"
version = "0.1.0"
description = ""
authors = ["Jonathan Skårstedt <jonathan@hexkon.st>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.31.0"
pydantic = "^2.4.2"

[tool.poetry.scripts]
tog = "tog.cli:cli"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.6.1"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
